...
    <string name="form1_no_notes">No notes</string>
    <string name="form1_donor_name">Donor signatory name</string>
    <string name="form1_donor_name_hint">Full name of the person releasing stock</string>
    <string name="form1_signatures">Signatures</string>
    <string name="form1_sign_donor">Donor</string>
    <string name="form1_sign_cbo">CBO</string>
    <string name="form1_signed">Signed</string>
    <string name="form1_tap_to_sign">Tap to sign</string>
    <string name="form1_photos">Photos of donation</string>
    <string name="form1_photo_shot">Photo %1$d</string>
    <string name="form1_photo_taken">Captured</string>
    <string name="form1_photo_tap">Tap to capture</string>
    <string name="form1_delivery_note">Delivery note number</string>
    <string name="form1_note_attach">Attach a photo of the note</string>
...
